--- a/Advanced Machine Learning Specialization/1. Introduction to Deep Learning/2. Introduction to neural networks/intro_to_tensorflow.ipynb
+++ b/Advanced Machine Learning Specialization/1. Introduction to Deep Learning/2. Introduction to neural networks/intro_to_tensorflow.ipynb
@@ -1,6 +1,7 @@
 {
  "cells": [
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {
     "slideshow": {
@@ -11,7 +12,7 @@
     "# Intro to TensorFlow\n",
     "\n",
     "This notebook covers the basics of TF and shows you an animation with gradient descent trajectory.\n",
-    "<img src=\"images/gradient_descent.png\" style=\"width:50%\">"
+    "<img src=\"gradient_descent.png\" style=\"width:50%\">"
    ]
   },
   {
@@ -1133,7 +1134,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.2"
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
