Intro to TensorFlow

--- a/Advanced Machine Learning Specialization/1. Introduction to Deep Learning/2. Introduction to neural networks/intro_to_tensorflow.ipynb
+++ b/Advanced Machine Learning Specialization/1. Introduction to Deep Learning/2. Introduction to neural networks/intro_to_tensorflow.ipynb
@@ -11,14 +11,7 @@
     "# Intro to TensorFlow\n",
     "\n",
     "This notebook covers the basics of TF and shows you an animation with gradient descent trajectory.\n",
-    "<img src=\"gradient_descent.png\" style=\"width:50%\">"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "![abc](gradient_descent.png)"
+    "<img src=\"image/gradient_descent.png\" style=\"width:50%\">"
    ]
   },
   {
