MNIST with Keras

--- a/Advanced Machine Learning Specialization/1. Introduction to Deep Learning/2. Introduction to neural networks/Mnist_with_keras.ipynb
+++ b/Advanced Machine Learning Specialization/1. Introduction to Deep Learning/2. Introduction to neural networks/Mnist_with_keras.ipynb
@@ -21,7 +21,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<img src=\"images/mnist_sample.png\" style=\"width:30%\">"
+    "<img src=\"image/mnist_sample.png\" style=\"width:30%\">"
    ]
   },
   {
