--- a/Advanced Machine Learning Specialization/1. Introduction to Deep Learning/2. Introduction to neural networks/mnist_with_keras.ipynb
+++ b/Advanced Machine Learning Specialization/1. Introduction to Deep Learning/2. Introduction to neural networks/mnist_with_keras.ipynb
@@ -75,7 +75,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<img src=\"https://github.com/hse-aml/intro-to-dl/blob/master/week2/v2/image/mnist_sample.png?raw=1\" style=\"width:30%\">"
+        "<img src=\"image/mnist_sample.png?raw=1\" style=\"width:30%\">"
       ]
     },
     {
