--- a/Advanced Machine Learning Specialization/1. Introduction to Deep Learning/3. Deep Learning for images/Week3_task2_fine_tuning_clean.ipynb
+++ b/Advanced Machine Learning Specialization/1. Introduction to Deep Learning/3. Deep Learning for images/Week3_task2_fine_tuning_clean.ipynb
@@ -88,10 +88,10 @@
         "In this task you will fine-tune InceptionV3 architecture for flowers classification task.\n",
         "\n",
         "InceptionV3 architecture (https://research.googleblog.com/2016/03/train-your-own-image-classifier-with.html):\n",
-        "<img src=\"https://github.com/hse-aml/intro-to-dl/blob/master/week3/image/inceptionv3.png?raw=1\" style=\"width:70%\">\n",
+        "<img src=\"image/inceptionv3.png?raw=1\" style=\"width:70%\">\n",
         "\n",
         "Flowers classification dataset (http://www.robots.ox.ac.uk/~vgg/data/flowers/102/index.html) consists of 102 flower categories commonly occurring in the United Kingdom. Each class contains between 40 and 258 images:\n",
-        "<img src=\"https://github.com/hse-aml/intro-to-dl/blob/master/week3/image/flowers.jpg?raw=1\" style=\"width:70%\">"
+        "<img src=\"image/flowers.jpg?raw=1\" style=\"width:70%\">"
       ]
     },
     {
