--- a/Advanced Machine Learning Specialization/1. Introduction to Deep Learning/3. Deep Learning for images/Week3_task2_fine_tuning_clean.ipynb
+++ b/Advanced Machine Learning Specialization/1. Introduction to Deep Learning/3. Deep Learning for images/Week3_task2_fine_tuning_clean.ipynb
@@ -394,7 +394,7 @@
       },
       "source": [
         "We will take a center crop from each image like this:\n",
-        "<img src=\"https://github.com/hse-aml/intro-to-dl/blob/master/week3/image/center_crop.jpg?raw=1\" style=\"width:50%\">"
+        "<img src=\"image/center_crop.jpg?raw=1\" style=\"width:50%\">"
       ]
     },
     {
