Programming Assignment 4 part 1

--- a/Advanced Machine Learning Specialization/1. Introduction to Deep Learning/4. Unsupervised representation learning/Autoencoders_task.ipynb
+++ b/Advanced Machine Learning Specialization/1. Introduction to Deep Learning/4. Unsupervised representation learning/Autoencoders_task.ipynb
@@ -394,7 +394,7 @@
         "\n",
         "We will then use symbolic API to apply and train these models.\n",
         "\n",
-        "<img src=\"https://github.com/hse-aml/intro-to-dl/blob/master/week4/image/autoencoder.png?raw=1\" style=\"width:50%\">"
+        "<img src=\"image/autoencoder.png?raw=1\" style=\"width:50%\">"
       ]
     },
     {
@@ -418,7 +418,7 @@
         "\n",
         "In geometric terms, we want to find d axes along which most of variance occurs. The \"natural\" axes, if you wish.\n",
         "\n",
-        "<img src=\"https://github.com/hse-aml/intro-to-dl/blob/master/week4/image/pca.png?raw=1\" style=\"width:30%\">\n",
+        "<img src=\"image/pca.png?raw=1\" style=\"width:30%\">\n",
         "\n",
         "\n",
         "PCA can also be seen as a special case of an autoencoder.\n",
@@ -783,7 +783,7 @@
         "Traditional convolutional layer takes a patch of an image and produces a number (patch -> number). In \"transpose convolution\" we want to take a number and produce a patch of an image (number -> patch). We need this layer to \"undo\" convolutions in encoder. We had a glimpse of it during week 3 (watch [this video](https://www.coursera.org/learn/intro-to-deep-learning/lecture/auRqf/a-glimpse-of-other-computer-vision-tasks) starting at 5:41).\n",
         "\n",
         "Here's how \"transpose convolution\" works:\n",
-        "<img src=\"https://github.com/hse-aml/intro-to-dl/blob/master/week4/image/transpose_conv.jpg?raw=1\" style=\"width:60%\">\n",
+        "<img src=\"image/transpose_conv.jpg?raw=1\" style=\"width:60%\">\n",
         "In this example we use a stride of 2 to produce 4x4 output, this way we \"undo\" pooling as well. Another way to think about it: we \"undo\" convolution with stride 2 (which is similar to conv + pool).\n",
         "\n",
         "You can add \"transpose convolution\" layer in Keras like this:\n",
@@ -1547,7 +1547,7 @@
         "This part is **optional**, it shows you one useful application of autoencoders: denoising. You can run this code and make sure denoising works :) \n",
         "\n",
         "Let's now turn our model into a denoising autoencoder:\n",
-        "<img src=\"https://github.com/hse-aml/intro-to-dl/blob/master/week4/image/denoising.jpg?raw=1\" style=\"width:40%\">\n",
+        "<img src=\"image/denoising.jpg?raw=1\" style=\"width:40%\">\n",
         "\n",
         "We'll keep the model architecture, but change the way it is trained. In particular, we'll corrupt its input data randomly with noise before each epoch.\n",
         "\n",
@@ -1942,7 +1942,7 @@
         "\n",
         "First thing we can do is image retrieval aka image search. We will give it an image and find similar images in latent space:\n",
         "\n",
-        "<img src=\"https://github.com/hse-aml/intro-to-dl/blob/master/week4/image/similar_images.jpg?raw=1\" style=\"width:60%\">\n",
+        "<img src=\"image/similar_images.jpg?raw=1\" style=\"width:60%\">\n",
         "\n",
         "To speed up retrieval process, one should use Locality Sensitive Hashing on top of encoded vectors. This [technique](https://erikbern.com/2015/07/04/benchmark-of-approximate-nearest-neighbor-libraries.html) can narrow down the potential nearest neighbours of our image in latent space (encoder code). We will caclulate nearest neighbours in brute force way for simplicity."
       ]
